--- a/biometric/2022-04-20.md
+++ b/biometric/2022-04-20.md
@@ -73,3 +73,28 @@ predict the behaviour of the suspects. The present research is driven to
 identify the usefulness of footprint and gait as an alternative to personal
 identification.
 
+### Title: Cyber-Forensic Review of Human Footprint and Gait for Personal Identification
+* Paper ID: 2204.09344v1
+* Paper URL: [http://arxiv.org/abs/2204.09344v1](http://arxiv.org/abs/2204.09344v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: The human footprint is having a unique set of ridges unmatched by any other
+human being, and therefore it can be used in different identity documents for
+example birth certificate, Indian biometric identification system AADHAR card,
+driving license, PAN card, and passport. There are many instances of the crime
+scene where an accused must walk around and left the footwear impressions as
+well as barefoot prints and therefore, it is very crucial to recovering the
+footprints from identifying the criminals. Footprint-based biometric is a
+considerably newer technique for personal identification. Fingerprints, retina,
+iris and face recognition are the methods most useful for attendance record of
+the person. This time the world is facing the problem of global terrorism. It
+is challenging to identify the terrorist because they are living as regular as
+the citizens do. Their soft target includes the industries of special interests
+such as defence, silicon and nanotechnology chip manufacturing units, pharmacy
+sectors. They pretend themselves as religious persons, so temples and other
+holy places, even in markets is in their targets. These are the places where
+one can obtain their footprints quickly. The gait itself is sufficient to
+predict the behaviour of the suspects. The present research is driven to
+identify the usefulness of footprint and gait as an alternative to personal
+identification.
+
