--- a/federate/2022-04-20.md
+++ b/federate/2022-04-20.md
@@ -433,3 +433,158 @@ current state of the field of FOLTR because, for FOLTR systems to be deployed,
 the factors affecting their performance, including the impact of non-IID data,
 need to thoroughly be understood.
 
+### Title: Federated Learning for Energy-limited Wireless Networks: A Partial Model Aggregation Approach
+* Paper ID: 2204.09746v1
+* Paper URL: [http://arxiv.org/abs/2204.09746v1](http://arxiv.org/abs/2204.09746v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: The limited communication resources, e.g., bandwidth and energy, and data
+heterogeneity across devices are two of the main bottlenecks for federated
+learning (FL). To tackle these challenges, we first devise a novel FL framework
+with partial model aggregation (PMA), which only aggregates the lower layers of
+neural networks responsible for feature extraction while the upper layers
+corresponding to complex pattern recognition remain at devices for
+personalization. The proposed PMA-FL is able to address the data heterogeneity
+and reduce the transmitted information in wireless channels. We then obtain a
+convergence bound of the framework under a non-convex loss function setting.
+With the aid of this bound, we define a new objective function, named the
+scheduled data sample volume, to transfer the original inexplicit optimization
+problem into a tractable one for device scheduling, bandwidth allocation,
+computation and communication time division. Our analysis reveals that the
+optimal time division is achieved when the communication and computation parts
+of PMA-FL have the same power. We also develop a bisection method to solve the
+optimal bandwidth allocation policy and use the set expansion algorithm to
+address the optimal device scheduling. Compared with the state-of-the-art
+benchmarks, the proposed PMA-FL improves 2.72% and 11.6% accuracy on two
+typical heterogeneous datasets, i.e., MINIST and CIFAR-10, respectively. In
+addition, the proposed joint dynamic device scheduling and resource
+optimization approach achieve slightly higher accuracy than the considered
+benchmarks, but they provide a satisfactory energy and time reduction: 29%
+energy or 20% time reduction on the MNIST; and 25% energy or 12.5% time
+reduction on the CIFAR-10.
+
+### Title: Federated Learning for Distributed Energy-Efficient Resource Allocation
+* Paper ID: 2204.09602v1
+* Paper URL: [http://arxiv.org/abs/2204.09602v1](http://arxiv.org/abs/2204.09602v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: In cellular networks, resource allocation is performed in a centralized way,
+which brings huge computation complexity to the base station (BS) and high
+transmission overhead. This paper investigates the distributed resource
+allocation scheme for cellular networks to maximize the energy efficiency of
+the system in the uplink transmission, while guaranteeing the quality of
+service (QoS) for cellular users. Particularly, to cope the fast varying
+channels in wireless communication environment, we propose a robust federated
+reinforcement learning (FRL_suc) framework to enable local users to perform
+distributed resource allocation in items of transmit power and channel
+assignment by the guidance of the local neural network trained at each user.
+Analysis and numerical results show that the proposed FRL_suc framework can
+lower the transmission overhead and offload the computation from the central
+server to the local users, while outperforming the conventional multi-agent
+reinforcement learning algorithm in terms of EE, and is more robust to channel
+variations.
+
+### Title: Distance and age of the massive stellar cluster Westerlund 1. I. Parallax method using Gaia-EDR3
+* Paper ID: 2204.09414v1
+* Paper URL: [http://arxiv.org/abs/2204.09414v1](http://arxiv.org/abs/2204.09414v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: Westerlund 1 (Wd 1) is one of the most massive young star clusters in the
+Milky Way. Although relevant for star formation and evolution, its fundamental
+parameters are not yet very well constrained. Our goal is to derive an accurate
+distance and provide constraints on the cluster age. We used the photometric
+and astrometric information available in the Gaia Early Data Release 3
+(Gaia-EDR3) to infer its distance of 4.06$^{+0.36}_{-0.34}$ kpc. Modelling of
+the eclipsing binary system W36 reported in Paper II led to the distance of
+4.34$\pm$0.25 kpc, in agreement with the Gaia-EDR3 distance and, therefore,
+validating the parallax zero-point correction approach appropriate for red
+objects. By taking advantage of another two recent distance determinations
+using the Gaia-EDR3, we obtained a weighted mean distance for the cluster as
+d$_{\rm wd1}$=4.23$^{+0.15}_{-0.13}$ kpc ($m-M$=13.13$^{+0.08}_{-0.07}$ mag),
+which has an unprecedented accuracy of 4\%. We adopted recent Geneva
+evolutionary tracks for supra-solar metallicity objects to infer the age of the
+faintest RSG source from Wd 1, leading to a cluster age of 11.0$\pm$0.5 Myr, in
+excellent agreement with recent work by Beasor \& Davies (10.4$^{+1.3}_{-1.2}$
+Myr) based on MIST evolutionary models. The age of W36 was reported to be
+3.5$\pm$0.5 Myr in Paper II, supporting recent claims of a temporal spread of
+several Myr for the star-forming process within Wd 1 instead of a monolithic
+starburst scenario.
+
+### Title: Federated Learning in Multi-Center Critical Care Research: A Systematic Case Study using the eICU Database
+* Paper ID: 2204.09328v1
+* Paper URL: [http://arxiv.org/abs/2204.09328v1](http://arxiv.org/abs/2204.09328v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: Federated learning (FL) has been proposed as a method to train a model on
+different units without exchanging data. This offers great opportunities in the
+healthcare sector, where large datasets are available but cannot be shared to
+ensure patient privacy. We systematically investigate the effectiveness of FL
+on the publicly available eICU dataset for predicting the survival of each ICU
+stay. We employ Federated Averaging as the main practical algorithm for FL and
+show how its performance changes by altering three key hyper-parameters, taking
+into account that clients can significantly vary in size. We find that in many
+settings, a large number of local training epochs improves the performance
+while at the same time reducing communication costs. Furthermore, we outline in
+which settings it is possible to have only a low number of hospitals
+participating in each federated update round. When many hospitals with low
+patient counts are involved, the effect of overfitting can be avoided by
+decreasing the batchsize. This study thus contributes toward identifying
+suitable settings for running distributed algorithms such as FL on clinical
+datasets.
+
+### Title: Enabling Dynamic and Intelligent Workflows for HPC, Data Analytics, and AI Convergence
+* Paper ID: 2204.09287v1
+* Paper URL: [http://arxiv.org/abs/2204.09287v1](http://arxiv.org/abs/2204.09287v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: The evolution of High-Performance Computing (HPC) platforms enables the
+design and execution of progressively larger and more complex workflow
+applications in these systems. The complexity comes not only from the number of
+elements that compose the workflows but also from the type of computations they
+perform. While traditional HPC workflows target simulations and modelling of
+physical phenomena, current needs require in addition data analytics (DA) and
+artificial intelligence (AI) tasks. However, the development of these workflows
+is hampered by the lack of proper programming models and environments that
+support the integration of HPC, DA, and AI, as well as the lack of tools to
+easily deploy and execute the workflows in HPC systems. To progress in this
+direction, this paper presents use cases where complex workflows are required
+and investigates the main issues to be addressed for the HPC/DA/AI convergence.
+Based on this study, the paper identifies the challenges of a new workflow
+platform to manage complex workflows. Finally, it proposes a development
+approach for such a workflow platform addressing these challenges in two
+directions: first, by defining a software stack that provides the
+functionalities to manage these complex workflows; and second, by proposing the
+HPC Workflow as a Service (HPCWaaS) paradigm, which leverages the software
+stack to facilitate the reusability of complex workflows in federated HPC
+infrastructures. Proposals presented in this work are subject to study and
+development as part of the EuroHPC eFlows4HPC project.
+
+### Title: Is Non-IID Data a Threat in Federated Online Learning to Rank?
+* Paper ID: 2204.09272v1
+* Paper URL: [http://arxiv.org/abs/2204.09272v1](http://arxiv.org/abs/2204.09272v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: In this perspective paper we study the effect of non independent and
+identically distributed (non-IID) data on federated online learning to rank
+(FOLTR) and chart directions for future work in this new and largely unexplored
+research area of Information Retrieval. In the FOLTR process, clients join a
+federation to jointly create an effective ranker from the implicit click signal
+originating in each client, without the need to share data (documents, queries,
+clicks). A well-known factor that affects the performance of federated learning
+systems, and that poses serious challenges to these approaches, is the fact
+that there may be some type of bias in the way the data is distributed across
+clients. While FOLTR systems are on their own rights a type of federated
+learning system, the presence and effect of non-IID data in FOLTR has not been
+studied. To this aim, we first enumerate possible data distribution settings
+that may showcase data bias across clients and thus give rise to the non-IID
+problem. Then, we study the impact of each of these settings on the performance
+of the current state-of-the-art FOLTR approach, the Federated Pairwise
+Differentiable Gradient Descent (FPDGD), and we highlight which data
+distributions may pose a problem for FOLTR methods. We also explore how common
+approaches proposed in the federated learning literature address non-IID issues
+in FOLTR. This allows us to unveil new research gaps that, we argue, future
+research in FOLTR should consider. This is an important contribution to the
+current state of the field of FOLTR because, for FOLTR systems to be deployed,
+the factors affecting their performance, including the impact of non-IID data,
+need to thoroughly be understood.
+
