--- a/defense/2022-04-21.md
+++ b/defense/2022-04-21.md
@@ -96,3 +96,31 @@ distribution security, temporary signature security, consensus security, and
 leader election fairness. The simulation result proved the feasibility and
 demonstrate the performance.
 
+### Title: An Information-theoretical Secured Byzantine-fault Tolerance Consensus in Quantum Key Distribution Network
+* Paper ID: 2204.09832v1
+* Paper URL: [http://arxiv.org/abs/2204.09832v1](http://arxiv.org/abs/2204.09832v1)
+* Updated Date: 2022-04-21
+* Code URL: null
+* Summary: Quantum key distribution (QKD) networks is expected to provide
+information-theoretical secured (ITS) communication over long distances. QKD
+networks based trusted relay architecture are now the most widely used scheme
+in practice. However, it is an unrealistic assumption that all relays are fully
+trustable in complex networks. In the past, only a few studies have
+theoretically analyzed the case of passive eavesdropping attack by dishonest
+relays and corresponding defense method. However, we have found that active
+attacks by dishonest relays can be more threatening. With the consideration of
+passive and active attacks, we treat dishonest relays as Byzantine nodes and
+analyzes the upper limit of Byzantine nodes that the QKD network can
+accommodate. In this paper, we propose an ITS Byzantine-fault tolerance (BFT)
+QKD network scheme to achieve end-to-end key distribution based on
+point-to-point QKD links. To ensure consistency and provide BFT ability in the
+QKD network, we design an ITSBFT-consensus protocol for this network scheme. To
+ensure the information-theoretic security of consensus, we design a temporary
+signature scheme based on point-to-point QKD link keys. To prevent Byzantine
+nodes from disrupting the execution process of key distribution, we design an
+end-to-end key distribution scheme combined with consensus. We theoretically
+analyze proposed ITSBFT-QKD network scheme from four aspects: QKD key
+distribution security, temporary signature security, consensus security, and
+leader election fairness. The simulation result proved the feasibility and
+demonstrate the performance.
+
